--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TypeScript-practice",
+  "name": "typescript-practice",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/song-code21/TypeScript-practice.git",
